--- a/Week_11_Independent_project_Regression_Victoria_Mbaka_2022.ipynb
+++ b/Week_11_Independent_project_Regression_Victoria_Mbaka_2022.ipynb
@@ -24,7 +24,8 @@
         "HPQviDmNtta8",
         "qjFHK1CKty7o",
         "HSsicSdvt4Zs"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -32,6 +33,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Victoriambaka/INDEPENDENT-PROJECT-WEEK-11/blob/main/Week_11_Independent_project_Regression_Victoria_Mbaka_2022.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
